# woom

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
docs/: cfgspecs.hosts.rst  cfgspecs.rst  cfgspecs.tasks.rst  cfgspecs.workflow.rst  cli.rst  cli.woom.clean.rst  cli.woom.kill.rst  cli.woom.overview.rst  cli.woom.rst  cli.woom.run.rst  cli.woom.show.artifacts.rst  cli.woom.show.overview.rst  cli.woom.show.rst  cli.woom.show.run_dirs.rst  cli.woom.show.status.rst  cli.woom.status.rst  conf.py  ext.rst  from_python.rst  index.rst  inputs.rst  inputs_dict.rst  inputs_envvars.rst  install.rst  lib.rst  quick.rst  start.rst  templates.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/_templates/genexamples/: example.rst  index.rst
docs/ext/: genexamples.py  genlogos.py
docs/samples/: hosts.cfg  tasks.cfg  workflow.cfg
env/: environment.yml  requirements-docs.txt
examples/academic/all_stages/: README.rst  tasks.cfg  workflow.cfg
examples/academic/artifacts/: README.rst  example.rst  hosts.cfg  prolog.rst  tasks.cfg  workflow.cfg
examples/academic/cycles/: README.rst  tasks.cfg  workflow.cfg
examples/academic/ensemble/: README.rst  example.rst  hosts.cfg  tasks.cfg  workflow.cfg  workflow.ini
examples/academic/ensemble/ext/: jinja_filters.py  validator_functions.py
examples/academic/single_task/: README.rst  hosts.cfg  tasks.cfg  workflow.cfg
examples/academic/templates/: README.rst  hosts.cfg  tasks.cfg  workflow.cfg
examples/academic/templates/templates/: env.sh  job.sh
examples/all_stages/: README.rst  tasks.cfg  woom_run.py  workflow.cfg
examples/cycles/: README.rst  hosts.cfg  tasks.cfg  workflow.cfg
examples/single_task/: README.rst  hosts.cfg  tasks.cfg  woom_run.py  workflow.cfg
tests/: conftest.py  test_conf.py  test_env.py  test_ext.py  test_hosts.py  test_iters.py  test_job.py  test_log.py  test_render.py  test_tasks.py  test_util.py  test_workflow.py
woom/: __init__.py  cli.py  conf.py  env.py  ext.py  hosts.cfg  hosts.ini  hosts.py  iters.py  job.py  log.py  render.py  sessions.py  tasks.ini  tasks.py  util.py  workflow.ini  workflow.py
woom/templates/: env.sh  job.sh
woom/tests/: test_util.py
