[project]
name = "woom"
description = "Workflow manager for ocean models"
authors = [
  {name = "Stephane Raynaud", email = "stephane.raynaud@shom.fr"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Oceanography",
]
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "colorlog",
  "configobj",
  "jinja2",
  "pandas",
  "platformdirs",
  "psutil",
  "tabulate",
]

[project.optional-dependencies]
docs = [
  "matplotlib",
  "sphinx",
  "sphinx-argparse",
  "sphinx-book-theme",
  "sphinxcontrib-programoutput",
]

[project.urls]
issue-tracker = "https://github.com/shom-fr/woom/issues"
source-code = "https://github.com/shom-fr/woom"

[project.scripts]
woom = "woom.cli:main"

[build-system]
requires = ["setuptools >= 64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["woom"]
include-package-data = true

[tool.setuptools_scm]
write_to = "woom/_version.py"

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true
